[ADD] Se termino path de Kafka con inserciones en MongoDB y Redis

--- a/manifests/kafka.yaml
+++ b/manifests/kafka.yaml
@@ -73,6 +73,10 @@ spec:
           value: "squidgame"
         - name: GroupID
           value: "squidgame"
+        - name: redisURL
+          value: "35.225.83.23:6379"
+        - name: redisPassword
+          value: "password85@"
 ---
 apiVersion: v1
 kind: Service
