--- a/manifests/kafka.yaml
+++ b/manifests/kafka.yaml
@@ -2,8 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka-strimzi-deployment
+  namespace: squidgame
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: kafka-strimzi
@@ -11,11 +12,12 @@ spec:
     metadata:
       labels:
         app: kafka-strimzi
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
       - name: kafka-strimzi-producer
-        image: kafka-api
-        imagePullPolicy: Never
+        image: cristianfrancisco85/kafka-api
         ports:
         - name: http
           containerPort: 8080
@@ -44,8 +46,7 @@ spec:
         - name: GroupID
           value: "squidgame"
       - name: kafka-strimzi-worker
-        image: kafka-worker
-        imagePullPolicy: Never
+        image: cristianfrancisco85/kafka-worker
         ports:
         - name: http
           containerPort: 8080
@@ -77,16 +78,112 @@ spec:
           value: "35.225.83.23:6379"
         - name: redisPassword
           value: "password85@"
+status: {}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: np-kafka-strimzi
+  name: main-clusterip
+  namespace: squidgame
 spec:
-  type: NodePort
   selector:
     app: kafka-strimzi
   ports:
   - port: 8080
+    protocol: TCP
     targetPort: 8080
-
+---
+apiVersion: networking.k8s.io/v1 
+kind: Ingress 
+metadata: 
+  name: main-ingress 
+  annotations: 
+    kubernetes.io/ingress.class: nginx 
+    nginx.ingress.kubernetes.io/rewrite-target: / 
+    nginx.ingress.kubernetes.io/service-upstream: "true"
+  namespace: squidgame
+spec: 
+  rules: 
+  - host: 35.239.53.123.nip.io
+    http: 
+      paths: 
+      - path: /main
+        pathType: Prefix 
+        backend: 
+          service: 
+            name: cip-kafka-strimzi 
+            port: 
+              number: 8080
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: error-injector
+  namespace: squidgame
+data:
+ nginx.conf: |-
+    events {}
+    http {
+        server {
+          listen 5000;
+            location / {
+                return 500;
+            }
+        }
+    }
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: error-injector
+  namespace: squidgame
+  labels:
+    app: error-injector
+spec:
+  selector:
+    matchLabels:
+      app: error-injector
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: error-injector
+      annotations:
+        linkerd.io/inject: enabled
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:alpine
+          volumeMounts:
+            - name: nginx-config
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
+      volumes:
+        - name: nginx-config
+          configMap:
+            name: error-injector
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: error-injector
+  namespace: squidgame
+spec:
+  ports:
+  - name: service
+    port: 5000
+  selector:
+    app: error-injector
+---
+apiVersion: split.smi-spec.io/v1alpha1
+kind: TrafficSplit
+metadata:
+  name: error-split
+  namespace: squidgame
+spec:
+  service: main-clusterip
+  backends:
+  - service: main-clusterip
+    weight: 700m
+  - service: error-injector
+    weight: 300m
