--- a/manifests/main.yaml
+++ b/manifests/main.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kafka-strimzi-deployment
+  name: kafka-strimzi-api-deployment
   namespace: squidgame
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: kafka-strimzi
+      app: kafka-strimzi-api
   template:
     metadata:
       labels:
-        app: kafka-strimzi
+        app: kafka-strimzi-api
       annotations:
         linkerd.io/inject: enabled
     spec:
@@ -45,28 +45,28 @@ spec:
           value: "squidgame"
         - name: GroupID
           value: "squidgame"
+status: {}
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kafka-strimzi-worker-deployment
+  namespace: squidgame
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: kafka-strimzi-worker
+  template:
+    metadata:
+      labels:
+        app: kafka-strimzi-worker
+      annotations:
+        linkerd.io/inject: enabled
+    spec:
+      containers:
       - name: kafka-strimzi-worker
         image: cristianfrancisco85/kafka-worker
-        ports:
-        - name: http
-          containerPort: 8080
-          protocol: TCP
-        livenessProbe:
-          httpGet:
-            path: /
-            port: http
-            scheme: HTTP
-          initialDelaySeconds: 10
-          timeoutSeconds: 1
-          periodSeconds: 30
-        readinessProbe:
-          httpGet:
-            path: /
-            port: http
-            scheme: HTTP
-          initialDelaySeconds: 10
-          timeoutSeconds: 1
-          periodSeconds: 30
         env:
         - name: kafkaURL
           value: "my-cluster-kafka-bootstrap:9092"
@@ -80,6 +80,32 @@ spec:
           value: "password85@"
 status: {}
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: web-app
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      role: web-app
+  template:
+    metadata:
+      labels:
+        role: web-app
+      annotations:
+        linkerd.io/inject: enabled
+    spec:
+      containers:
+      - name: react-app
+        image: cristianfrancisco85/react-app:latest
+        ports:
+        - containerPort: 80
+      - name: nodejs-app
+        image: cristianfrancisco85/nodejs-app:latest
+        ports:
+        - containerPort: 4000
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -87,11 +113,26 @@ metadata:
   namespace: squidgame
 spec:
   selector:
-    app: kafka-strimzi
+    app: kafka-strimzi-api
   ports:
   - port: 8080
     protocol: TCP
     targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: web-app-clusterip
+spec:
+  ports:
+  - port: 80
+    name: http
+    targetPort: 80
+  - port: 4000
+    name: nodejs-app
+    targetPort: 4000
+  selector:
+    role: web-app
 ---
 apiVersion: networking.k8s.io/v1 
 kind: Ingress 
@@ -99,7 +140,6 @@ metadata:
   name: main-ingress 
   annotations: 
     kubernetes.io/ingress.class: nginx 
-    nginx.ingress.kubernetes.io/rewrite-target: / 
     nginx.ingress.kubernetes.io/service-upstream: "true"
   namespace: squidgame
 spec: 
@@ -107,13 +147,44 @@ spec:
   - host: 35.239.53.123.nip.io
     http: 
       paths: 
-      - path: /main
+      - path: /
         pathType: Prefix 
         backend: 
           service: 
-            name: cip-kafka-strimzi 
+            name: main-clusterip 
             port: 
               number: 8080
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: web-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: web-app-clusterip
+            port: 
+              number: 4000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: react-dashboard
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30000
+  selector:
+    role: web-app
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -125,7 +196,7 @@ data:
     events {}
     http {
         server {
-          listen 5000;
+          listen 8080;
             location / {
                 return 500;
             }
@@ -171,7 +242,7 @@ metadata:
 spec:
   ports:
   - name: service
-    port: 5000
+    port: 8080
   selector:
     app: error-injector
 ---
